--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/news.css" />
     <link rel="stylesheet" href="fontawesome-free-6.1.1-web/css/all.css" />
     <link rel="shortcut icon" type="images/png" href="images/News_24-removebg-preview.png" />
-
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/53ca7f6ee2.js" crossorigin="anonymous"></script>
     <script src="js/news.js" defer></script>
     <title>News 24</title>
